# eventsourcing-modularization

./: Cargo.toml
src/: lib.rs
src/env_set_up/: connection.rs  keyspace.rs  model.rs  table.rs
src/eventsourcing_module/employee_command/: model.rs
src/eventsourcing_module/employee_entity/: behaviour.rs
src/eventsourcing_module/employee_event/: model.rs
src/eventsourcing_module/employee_state/: model.rs
