[package]
name = "eventsourcing_example"
version = "0.1.0"
authors = ["amita <amita.yadav@knoldus.in>"]
edition = "2018"

[dependencies]
eventsourcing = "0.1.1"
serde ="1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.33"
eventsourcing-derive = "0.1.1"
cdrs = "2.0.0-beta.4"
cdrs_helpers_derive = '*'
json = "*"
uuid = { version = "0.7", features = ["v4"] }
chrono = "0.4.6"
actix-web = "0.7"
actix = "0.7"
listenfd = "0.3"
indexmap = "1.0.2"